overflow fix

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -165,7 +165,7 @@ header{
   height: 505px;
   bottom: 0;
   width: 100%;
-  //overflow-y: hidden;
+  overflow-y: hidden;
     .orbit_form{
       margin-top: 505px!important;
       width: 100%;
@@ -1324,6 +1324,7 @@ span.ui-icon.ui-icon-circle-triangle-w{
   }
   .reviews_slider .orbit{
     height: 690px;
+    overflow-y: scroll;
     .orbit-slide .review-slide{
       height: 660px;
       margin-bottom: 10px;
